ingress/echoheaders/AngularNginxDeployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: angular
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: angular
    spec:
      volumes:
      - name: shared-data
        emptyDir: {}
      containers:
      - image: nginx
        name: nginx-server
        imagePullPolicy: Always
        volumeMounts:
        - name: shared-data
          mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
