ingress/echoheaders/publiNginxDeployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-public
  namespace: nginx-public-ingress
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-public
    spec:
      containers:
      - image: gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.15
        name: nginx-public
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 80
        - containerPort: 443
        args:
         - /nginx-ingress-controller
         - '--default-backend-service=nginx-public-ingress/default-public-http-backend'
         - '--ingress-class=nginx-public'
         - '--configmap=nginx-ingress/nginx'
