ingress/echoheaders/06-publiNginxService.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-public
  namespace: nginx-public-ingress
spec:
  type: LoadBalancer
  loadBalancerSourceRanges:
  - 195.188.122.66/32
  - 81.145.18.66/32
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  selector:
    app: nginx-public
