ingress/echoheaders/1EchoHeadersService.yml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-demo
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: kubernetes-demo
