ingress/echoheaders/publiNginxDefault.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-public-http-backend
  namespace: nginx-public-ingress
spec:
  ports:
    type: NodePort
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: default-public-http-backend
