ingress/echoheaders/publiNginxService.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-public
  namespace: nginx-public-ingress
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  selector:
    app: nginx-public
