ingress/echoheaders/AngularNginxPublicIngress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: angular-public
  annotations:
    kubernetes.io/ingress.class: "nginx-public"
spec:
  tls:
  - secretName: tls-key
    hosts:
    - rvswebsite.com
  rules:
  - host: rvswebsite.com
    http: 
      paths:
      - path: /
        backend:
          serviceName: angular
          servicePort: 80
