ingress/echoheaders/EchoHeadersNginxPublicIngress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetdemo-public
spec:
  rules:
    - host: afb59d7d96f1d11e8a3a00255995eb89-1717703683.us-west-2.elb.amazonaws.com
      http:
        paths:
          - path: /kubernetdemo
            backend:
              serviceName: kubernetdemo
              servicePort: 80
