ingress/echoheaders/ingress.yml
apiVersion: v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: website1.com
    http:
      paths:
      - backend:
          serviceName: website1
          servicePort: 80
  - host: website2.com
    http:
      paths:
      - backend:
          serviceName: website2
          servicePort: 80
  - host: website3.com
    http:
      paths:
      - backend:
          serviceName: website3
          servicePort: 80
